--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 html,
 body{
     font-family: 'Jura', sans-serif;
-    background: #ecece5;
 }
+
+section{
+    margin-bottom: 12em;
+    margin-top: 4em;
+}
+
